# sketch-n-sketch

./: .gitattributes  .gitignore  LICENSE  LICENSE.md  NOTICE  README.md  analyze.r  build.sc  chrome_timings.csv  crunch_benchmark_results.rb  firefox_timings.csv  index.html  package.json  participant_mouse_usage.txt  survey.erb  test.txt  user_study_analyze.rb  user_study_server.rb  watchmake  watchtest
SimpleCase/: LanguageParser.hs
SlickGrid/: .gitignore  slick.grid.css
benchmark/: count_example_locs.rb  crunch_benchmark_results.rb
blog/: 00-preview.html  01-case-studies.html  02-user-study.html  03-user-study-videos.html  04-coffee.html  05-deuce.html  06-deuce-user-study.html  index.html
deuce/: deuceDragDrop.html
examples/: ChristmasSong1Begin.elm  ChristmasSong3AfterTranslation.elm  StudentGrades.elm  TutorialMemory.elm  TutorialPizzas.elm  TutorialStudentGrades.elm  activeTrans.little  activeTrans2.little  badPrelude.elm  balanceScale.little  bar1.little  barGraph.little  basicPage.little  basicSlides.little  basicText.little  battery.little  batteryDynamic.little  battery_deuce.little  (+239 more)
sketch_n_myth/src/: branch.ml  branch.mli  clean.ml  clean.mli  constraints.ml  constraints.mli  debug.ml  dune  eval.ml  eval.mli  exp.adt  fill.ml  fill.mli  fresh.ml  fresh.mli  int2.ml  lang.ml  list2.ml  list2.mli  log.ml  main.ml  nondet.ml  nondet.mli  option2.ml  option2.mli  pair2.ml  pair2.mli  params.ml  refine.ml  refine.mli  res.ml  res.mli  res_consistency.ml  res_consistency.mli  res_util.ml  res_util.mli  result2.ml  result2.mli  solve.ml  solve.mli  (+15 more)
(+628 files in other folders)
